# arag

./: .gitignore  Cargo.toml  README.md  arag.yml
.github/workflows/: build.yml  release.yml
src/: cli.rs  constants.rs  helpers.rs  main.rs  project_creator.rs
src/types/: cli.rs  mod.rs
src/utils/: cache.rs  cli.rs  helpers.rs  mod.rs  yaml_parser.rs
static/css/: index.css
static/js/: index.js
templates/: index.html
