[package]
name = "arag"
version = "0.1.2"
authors = ["Vahe Grigoryan <vahegian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
handlebars = "4.1.3"
base64 = "0.13.0"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
structopt = "0.3.25"
opener = "0.5.0"
console = "0.15.0"
crossterm = "0.22.1"