[package]
name = "arag"
version = "0.1.6"
authors = ["Vahe Grigoryan <vahe@anspar.io>"]
edition = "2018"

[dependencies]
serde_json = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
handlebars = { version = "4.1.3", features = ["dir_source"] } # MIT
base64 = "0.13.0"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
structopt = "0.3.25" # MIT
opener = "0.5.0" # MIT
console = "0.15.0" # MIT
serde_yaml = "0.8"
notify = "4.0.17" # CCO or  Artistic License 2.0